kubernetes/production/apps/default/node-red/app/node-red.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-red-service
spec:
  ports:
  - port: 80
    targetPort: 1880
  selector:
    app.kubernetes.io/name: node-red
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app node-red
  labels:
    app.kubernetes.io/name: *app
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: *app
  replicas: 1
  template:
    metadata:
       labels:
        app: *app
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        fsGroup: 1000
      containers:
      - name: node-red
        image: nodered/node-red
        ports:
        - containerPort: 1880
          name: *app
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        volumeMounts:
        - name: nodered-data
          mountPath: /data
      volumes:
      - name: nodered-data
        persistentVolumeClaim:
          claimName: nodered-data
