kubernetes/production/apps/default/node-red/app/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nodered-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: traefik.${SECRET_CLUSTER_LOCAL_DOMAIN}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nodered.${SECRET_CLUSTER_LOCAL_DOMAIN}`)
      kind: Rule
      services:
        - name: node-red-service
          port: 1880
  tls:
    secretName: default-certificate-secret-staging
